# InexorGlueGen

./: .gitignore  CMakeLists.txt  conanfile.py  license.md  readme.md
cmake/: compile_flags_and_defs.cmake  functions.cmake  platform_detection.cmake
inexor/: CMakeLists.txt
inexor/filesystem/: CMakeLists.txt
inexor/gluegen/: ASTs.cpp  ASTs.hpp  CMakeLists.txt  ParserContext.hpp  SharedAttributes.cpp  SharedAttributes.hpp  SharedVarDatatypes.cpp  SharedVarDatatypes.hpp  SharedVariables.cpp  SharedVariables.hpp  fill_templatedata.cpp  fill_templatedata.hpp  generate_files.cpp  gluegen.cpp  parse_helpers.cpp  parse_helpers.hpp  parse_sharedclass.cpp  parse_sourcecode.cpp  print_data.cpp  print_data.hpp  render_files.cpp  render_files.hpp
